Fixed Who Am I? Alignment

--- a/style/style.css
+++ b/style/style.css
@@ -874,11 +874,6 @@ footer {
 		margin: 10px 0px;
 	}
 
-	section#about #about-row .col#about-me {
-		margin: 20px 0px;
-	}
-
-
 	section#about #about-row .col#about-me p,
 	section#about #about-row .col#about-me ul {
 		line-height: 1.5;
